# pub-aie7-rag-fastapi-react

./: .gitignore  .vercelignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  start-dev.sh  vercel.json
.cursor/rules/: branch-rule.mdc
aimakerspace/openai_utils/: embedding.py
api/: app.py  requirements.txt  test.py  vercel.json
frontend/: next.config.ts  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/upload-pdf/: route.ts
frontend/src/utils/: api-client.ts
