[project]
name = "rag-pdf-search"
version = "0.1.0"
description = "homework 3 for ai makerspace bootcamp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.9",
    "jupyter>=1.1.1",
    "numpy>=1.26.0",
    "openai",
    "pydantic>=2.11.4",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "uvicorn>=0.34.2",
]
